externalservices/EgressTLSOrigin.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dafare.galloro.net
spec:
  hosts:
  - dafare.galloro.net
  ports:
  - number: 80
    name: http-port
    protocol: HTTP
    targetPort: 443
  - number: 443
    name: https-port
    protocol: HTTPS
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dafare.galloro.net
spec:
  host: dafare.galloro.net
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 80
      tls:
        mode: SIMPLE # initiates HTTPS when accessing dafare.galloro.net
        sni: dafare.galloro.net
