externalservices/example-virt.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: example-virt
spec:
  hosts:
  - example.virt #'DUMMY' Name resolved by Istio DNS Proxy
  addresses:
  - 198.51.100.0 #'DUMMY' Address provided by DNS Proxy for the name
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
  endpoints:
  - address: example.com # External example.com
    ports:
      http: 80
  - address: httpbin.meshed.svc.cluster.local # Internal deployment running inside the mesh
    ports:
      http: 80
