externalservices/example_int-ext-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: example-int-ext
spec:
  hosts:
  - example.virt
  http:
  - rewrite:
      authority: example.com  
    route:
    - destination:
        host: example.com
        port:
          number: 80
      weight: 50
    - destination:
        host: httpbin.meshed.svc.cluster.local
        port:
          number: 80
      weight: 50
